# rewind

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  Rewind_Spec_v2.docx  Rewind_Spec_v2.txt  Rewind_TreeHacks_2026_Fetch_AI_Spec.docx  amex.csv  capitalone_us.py  chase_debit.py  dev_a_tasks.md  dev_b_tasks.md  findings.md  interaction-flow.txt  pattern-agent-with-mailbox.py  progress.md  project-structure.txt  pyproject.toml  quickstart.sh  task_plan.md
agents/: context_sentinel.py
backend/: agent1qdwpg349un_data.json  agent1qwh3vd64zg_data.json  dump.rdb
backend/data/: Certifications.csv  Saksham_CV.docx.md  XPostExporter_saksham_adh_2025-11-08_16-19_20.csv  github_data.md  research_profiler.md
backend/data/daily_goals/: 268.md  269.md  270.md  271.md  272.md  273.md  274.md  275.md  276.md  279.md  283.md  284.md  285.md  286.md  287.md
backend/data/reflections/: goals_jan30_26.md  reflection_2.md
backend/data/rewind.egg-info/: PKG-INFO
backend/docker/: docker-compose.yml
backend/scripts/: agentverse_bootstrap.py  run_all.py
backend/src/: goal_logic.py  server.py
backend/src/agents/: context_sentinel.py  disruption_detector.py  energy_monitor.py  factory.py  ghost_worker.py  profiler_agent.py  protocols.py  reminder_agent.py  scheduler_kernel.py
backend/src/composio/: main.py
backend/src/config/: settings.py
backend/src/data_pipeline/: parsers.py  redis_store.py  signals.py
backend/src/engine/: __init__.py  disruption_classifier.py  lts.py  mts.py  sts.py  task_buffer.py
backend/src/models/: messages.py  task.py
backend/src/scripts/: seed_demo.py  seed_redis.py
backend/src/services/: composio_service.py
backend/tests/: conftest.py  test_engine.py  test_goal_logic.py  test_messages.py  test_profiler.py  test_server_integration.py  test_server_ws.py  test_task.py
data/: response_1762641602700.json
docs/: chat-tui.md  debrief_tomorrow.md  integration_roadmap.txt  onboarding.md  quickstart.md  rewind-heartbeat-proactivity-philosophy.md  rewind-native-imessage-reminders-plan.md  rewind-openclaw-integration.md  rewind-rust-native-cli-ios-bridge-notes.md  rust-cli-spec.md  spec-disruption-recovery-and-ios-bridge.md  statements.md  uagents_claude_technical_reference.txt  value-proof-and-productization-plan.md  zeroclaw-ghostwriter-imessage-reminders-plan.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/auth/callback/: page.tsx
frontend/src/app/calendar/: page.tsx
frontend/src/app/integrations/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/components/: AgentActivityLog.tsx  ClientShell.tsx  DemoControls.tsx  DraftReview.tsx  ScheduleTimeline.tsx  Sidebar.tsx  TaskCard.tsx  TaskInput.tsx  TaskInputForm.tsx  VoiceAgent.tsx  VoiceInput.tsx
frontend/src/lib/: constants.ts  mockCalendar.ts  mockData.ts  useElevenLabsAgent.ts  useScheduleStore.ts  useWebSocket.ts
frontend/src/types/: schedule.ts
protocols/: chat_setup.py  models.py  payment_setup.py  rewind_protocol.py
rewind-cli/: Cargo.toml  build.rs
rewind-cli/src/: auth.rs  calendar.rs  chat.rs  chat_worker.rs  codex_cli.rs  config.rs  google_calendar.rs  llm.rs  llm_stream.rs  main.rs  nudges.rs  onboard.rs  reminders_cmd.rs  setup.rs  state.rs
rewind-core/: Cargo.toml
rewind-core/src/: disruption.rs  finance.rs  goals.rs  lib.rs  mts.rs  mts_task_buffer.rs  planner.rs  reminders.rs  routing.rs  scheduler_kernel.rs  signals.rs  sts.rs  task.rs  task_buffer.rs  time.rs  user_goals.rs
rewind-finance/: Cargo.toml
rewind-finance/src/: amex_parser.rs  category_rules.rs  lib.rs  task_emitter.rs
rewind-finance/tests/: test_sts_mts_from_amex.rs
rewind-ingest/: Cargo.toml
rewind-ingest/src/: lib.rs  types.rs
rewind-ingest/src/parsers/: capital_one_us.rs  chase_debit.rs  mod.rs
rewind.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/config/: redis_schema.yaml  settings.py
src/data_pipeline/: embeddings.py  parsers.py
