[workspace]
members = [
    "rewind-core",
    "rewind-ingest",
    "rewind-finance",
    "rewind-cli",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Tarive <tarive22@gmail.com>"]
license = "MIT"
repository = "https://github.com/Tar-ive/rewind"

[workspace.dependencies]
# Core dependencies - will add as needed
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.42", features = ["full"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11"
csv = "1.3"
clap = { version = "4.5", features = ["derive"] }
chrono-tz = "0.10"
reqwest = { version = "0.12", features = ["json"] }

# Testing
serde_json = "1.0"
