[project]
name = "rewind"
version = "0.1.0"
description = "The Intelligent Life Scheduler - AI-powered life operating system"
requires-python = ">=3.11"
dependencies = [
    "uagents",
    "uagents-core",
    "anthropic",
    "redisvl",
    "redis",
    "sentence-transformers",
    "pandas",
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "httpx",
    "composio",
    "composio-langchain",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "fakeredis",
    "httpx",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
pythonpath = ["backend"]
