[package]
name = "rewind-cli"
version.workspace = true
edition.workspace = true
build = "build.rs"

[[bin]]
name = "rewind"
path = "src/main.rs"

[dependencies]
rewind-core = { path = "../rewind-core" }
rewind-finance = { path = "../rewind-finance" }
rewind-ingest = { path = "../rewind-ingest" }
anyhow = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
which = "7.0"
reqwest = { workspace = true, features = ["stream"] }
futures-util = "0.3"
toml = "0.8"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Google Calendar direct integration (optional feature: gcal)
hyper = { version = "0.14", features = ["client", "http1", "http2"], optional = true }
hyper-rustls = { version = "0.24", optional = true }
google-calendar3 = { version = "5", optional = true, features = ["yup-oauth2"] }

[features]
default = []
gcal = ["hyper", "hyper-rustls", "google-calendar3"]
